# solemne2

./: .gitignore  CMakeLists.txt  README.md  concurrent_image_recorder.cpp
include/: ImageData.h  ImageGenerator.h  ImageWriter.h  ThreadSafeQueue.h  TurboJPEGWriter.h  Utils.h
src/: ImageGenerator.cpp  ImageWriter.cpp  ThreadSafeQueue.cpp  TurboJPEGWriter.cpp  Utils.cpp  main.cpp
tests/: diskWritingTests.cpp  main.cpp
